--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,11 @@ name = "pypi"
 selenium = "*"
 webdriver-manager = "*"
 pytest = "*"
+beautifulsoup4 = "*"
+pytest-xdist = "*"
 
 [dev-packages]
+pylint = "*"
 
 [requires]
 python_version = "3.9"
