--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ sonar:
 test-main:
   stage: Tests
   image:
-    name: python:3.10-slim
+    name: python:3.10
   script:
     - apt update
     - apt-get install -y wget
@@ -35,7 +35,7 @@ test-main:
 test-library:
   stage: Tests
   image:
-    name: python:3.10-slim
+    name: python:3.10
   script:
     - apt update
     - apt-get install -y wget
