--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ test-main:
     - pip install pipenv
     - pipenv install
   script:
-    - pipenv run pytest pages/main
+    - pipenv run pytest --headless pages/main
   tags:
     - docker_shared
   only:
@@ -49,7 +49,7 @@ test-library:
     - pip install pipenv
     - pipenv install
   script:
-    - pipenv run pytest pages/main
+    - pipenv run pytest --headless pages/main
   tags:
     - docker_shared
   only:
